fixed category bug not showing. Also, I can properly edit fields

--- a/src/components/Transactions/Transactions.css
+++ b/src/components/Transactions/Transactions.css
@@ -33,10 +33,6 @@
   width: 320px;
 }
 
-.menuItem {
-  background-color: blue;
-}
-
 #description {
 
 }
